compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__case_with_multiple_subjects_building_record_matched_by_pattern.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "pub fn go(x, y) {\n   case x, y {\n     Ok(1), Error(_) -> Ok(1)\n     Error(_), Ok(n) -> Ok(n)\n     _, _ -> Error(Nil)\n   }\n}"
---
----- SOURCE CODE
pub fn go(x, y) {
   case x, y {
     Ok(1), Error(_) -> Ok(1)
     Error(_), Ok(n) -> Ok(n)
     _, _ -> Error(Nil)
   }
}

----- COMPILED JAVASCRIPT
import { Ok, Error } from "../gleam.mjs";

export function go(x, y) {
  if (x instanceof Ok) {
    if (y instanceof Error && x[0] === 1) {
      return x;
    } else {
      return new Error(undefined);
    }
  } else if (y instanceof Ok) {
    return y;
  } else {
    return new Error(undefined);
  }
}
