compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__deeply_nested_string_prefix_assignment.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\ntype Wibble {\n  Wibble(Wobble)\n}\ntype Wobble {\n  Wobble(wabble: Wabble)\n}\ntype Wabble {\n  Wabble(tuple: #(Int, String))\n}\n\npub fn main() {\n  let tmp = Wibble(Wobble(Wabble(#(42, \"wibble\"))))\n  case tmp {\n    Wibble(Wobble(Wabble(#(_int, \"w\" as wibble <> rest)))) -> wibble <> rest\n    _ -> panic\n  }\n}\n"
---
----- SOURCE CODE

type Wibble {
  Wibble(Wobble)
}
type Wobble {
  Wobble(wabble: Wabble)
}
type Wabble {
  Wabble(tuple: #(Int, String))
}

pub fn main() {
  let tmp = Wibble(Wobble(Wabble(#(42, "wibble"))))
  case tmp {
    Wibble(Wobble(Wabble(#(_int, "w" as wibble <> rest)))) -> wibble <> rest
    _ -> panic
  }
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType, makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

class Wibble extends $CustomType {
  constructor($0) {
    super();
    this[0] = $0;
  }
}

class Wobble extends $CustomType {
  constructor(wabble) {
    super();
    this.wabble = wabble;
  }
}

class Wabble extends $CustomType {
  constructor(tuple) {
    super();
    this.tuple = tuple;
  }
}

export function main() {
  let tmp = new Wibble(new Wobble(new Wabble([42, "wibble"])));
  let $ = tmp[0].wabble.tuple[1];
  if ($.charCodeAt(0) === 119) {
    let wibble = "w";
    let rest = $.slice(1);
    return wibble + rest;
  } else {
    throw makeError(
      "panic",
      FILEPATH,
      "my/mod",
      16,
      "main",
      "`panic` expression evaluated.",
      {}
    )
  }
}
