compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__nested_string_prefix_match.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn main() {\n  case Ok([\"a\", \"b c\", \"d\"]) {\n    Ok([\"a\", \"b \" <> _, \"d\"]) -> 1\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case Ok(["a", "b c", "d"]) {
    Ok(["a", "b " <> _, "d"]) -> 1
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Ok, toList, Empty as $Empty } from "../gleam.mjs";

export function main() {
  let $ = new Ok(toList(["a", "b c", "d"]));
  let $1 = $[0];
  if ($1 instanceof $Empty) {
    return 1;
  } else {
    let $2 = $1.tail;
    if ($2 instanceof $Empty) {
      return 1;
    } else {
      let $3 = $2.tail;
      if ($3 instanceof $Empty) {
        return 1;
      } else if (
        $3.tail instanceof $Empty &&
        $1.head === "a" &&
        $2.head.startsWith("b ") &&
        $3.head === "d"
      ) {
        return 1;
      } else {
        return 1;
      }
    }
  }
}
