compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__case__nested_string_prefix_match_that_would_crash_on_js.snap
---
source: compiler-core/src/javascript/tests/case.rs
expression: "\npub fn main() {\n  case Ok([\"b c\", \"d\"]) {\n    Ok([\"b \" <> _, \"d\"]) -> 1\n    _ -> 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  case Ok(["b c", "d"]) {
    Ok(["b " <> _, "d"]) -> 1
    _ -> 1
  }
}


----- COMPILED JAVASCRIPT
import { Ok, toList, Empty as $Empty } from "../gleam.mjs";

export function main() {
  let $ = new Ok(toList(["b c", "d"]));
  let $1 = $[0];
  if ($1 instanceof $Empty) {
    return 1;
  } else {
    let $2 = $1.tail;
    if ($2 instanceof $Empty) {
      return 1;
    } else if (
      $2.tail instanceof $Empty &&
      $1.head.startsWith("b ") &&
      $2.head === "d"
    ) {
      return 1;
    } else {
      return 1;
    }
  }
}
